log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output # Must match your log-output deployment label
  ports:
    - protocol: TCP
      port: 80 # The external-facing port inside the cluster
      targetPort: 3000 # The containerPort of your log-web-server
